@@ -30,6 +30,38 @@ function renameItem (el) {
     });
 }
 
+function renameCategory (el) {
+    categoryLabel = $(el).find('th span').html();
+    var message = 'Current category name is: <b>' + categoryLabel + '</b><br /><br />';
+    $('div#dialog-rename-category').removeClass('hidden').addClass('visible');
+    $('div#dialog-rename-category').find('p').html(message);
+    $('div#dialog-rename-category').find('input').attr('value', categoryLabel).attr('style', 'width: 100%;');
+    $('div#dialog-rename-category').dialog({
+        resizable : false,
+        modal     : true,
+        buttons   : {
+            'Rename': function() {
+                $(this).find('p').html('Processing...');
+                $(this).find('form').hide();
+                var categoryId = $(el).parents('table').attr('id').match('\\d+$');
+                if ($(this).find('input[type=text]').attr('value')) {
+                   $.post(
+                       '/workflow/rename/',
+                       $(this).find('form').serialize() + '&category_id=' + categoryId,
+                       function (data) {
+                            $(el).find('th span').html(data.label);
+                            $('div#dialog-rename-category').dialog('close');
+                        }
+                    );
+                }
+            },
+            'Cancel': function() {
+                $(this).dialog('close');
+            }
+        }
+    });
+}
+
 function deleteItem(el) {
     var itemLabel = $(el).find('td.label span').html();
     var message = 'This action is irrecoverable !<br />Are you sure to delete <b>' + itemLabel + '</b> ?';
