@@ -8,7 +8,7 @@
 </div>
 
 <div id='rename_delete_category'>
-  <a title='Rename category' onclick='return false;' href=''>
+  <a title='Rename category' onclick="renameCategory($(this).parents('tr')); return false;" href=''>
     <img src='/sjwebkit/common/images/famfamfam_icons/pencil.png' alt='Rename'/>
   </a>
   <a title='Delete category' onclick="deleteCategory($(this).parents('tr')); return false;" href=''>
@@ -25,6 +25,12 @@
   <div id='dialog-rename-item' title='Rename item' class='hidden'>
     <p></p>
     <form onsubmit='return false;'>
+      <label>New name: <input type='text' name='new_name' /></label><br/>
+    </form>
+  </div>
+  <div id='dialog-rename-category' title='Rename category' class='hidden'>
+    <p></p>
+    <form>
       <label>New name: <input type='text' name='new_name' /></label><br/>
     </form>
   </div>
