@@ -8,6 +8,7 @@ Version 0.4.0~dev
 	* Add 'rename item' feature.
 	* Add 'delete item' feature.
 	* Add 'delete category' feature.
+	* Add 'rename category' feature.
 
 Version 0.3.2 Released on 2011/07/27
 
